--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title>Login | ZippieEats</title>
 </head>
 <body>
-  <h2>Login</h2>
 
-  <form id="loginForm">
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <button type="submit">Login</button>
-  </form>
+<h2>Login</h2>
 
-  <script src="js/login.js"></script>
+<input type="email" id="email" placeholder="Email" />
+<br><br>
+<input type="password" id="password" placeholder="Password" />
+<br><br>
+<button onclick="login()">Login</button>
+
+<p id="msg"></p>
+
+<script src="js/login.js"></script>
 </body>
 </html>
