--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Register</title>
+  <title>Register | ZippieEats</title>
 </head>
 <body>
-  <h2>Register</h2>
 
-  <form id="registerForm">
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <button type="submit">Register</button>
-  </form>
+<h2>Register</h2>
 
-  <script src="js/register.js"></script>
+<input type="email" id="email" placeholder="Email" />
+<br><br>
+<input type="password" id="password" placeholder="Password" />
+<br><br>
+<button onclick="register()">Register</button>
+
+<p id="msg"></p>
+
+<script src="js/register.js"></script>
 </body>
 </html>
